[n] Добавлено апи для ContentPage
